# timps

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOY_CLOUD.md  DOCS.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  PHASE_GATEWAY.md  PROJECT_OVERVIEW.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.md  README.pt.md  ROADMAP.md  SECURITY.md  TEST_GUIDE.md  TUI_README.md  contributing.md  docker-compose.yml  download_cli.sh  install.sh  package-lock.json  package.json  quickstart.sh  railway.json  (+6 more)
.changeset/: config.json  fix-m3-honesty.md  mcp-tools-m3-followup.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml  timps-daily-improve.agent.md
.github/DISCUSSION_TEMPLATE/: ideas.md  qa.md  welcome.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  plugin_submission.yml  setup_help.yml
.github/agents/: daily-improve-agent.agent.md
.github/workflows/: ci.yml  dependencies.yml  docker-publish.yml  eval.yml  publish.yml  release-cli.yml  release-vscode.yml  release.yml  security.yml  supply-chain-audit.yml  tauri-release.yml  test-coverage.yml
.timps/benchmarks/: run_1780811372711.json  run_1780811466223.json  run_1780816409096.json  run_1780818196196.json  run_1780818336960.json  run_1780818450893.json  run_1780822384638.json  run_1781061353913.json  run_1781063726660.json  run_1781065335841.json  run_1781066327680.json  run_1781066768250.json  run_1781067092256.json  run_1781067427722.json  run_1781067808285.json
Formula/: timps.rb
apps/marketplace/: .eslintrc.json  README.md  next.config.js  package.json  tsconfig.json
apps/mobile/: README.md  package.json
benchmark/: index.ts
benchmark/dataset/: contradictions.json  corpus.json  ground_truth.json  queries.json  questions.json
benchmark/results/: README.md
benchmark/runners/: aetherForge.ts  baseline.ts  echoForge.ts  harmonicSheafWeaver.ts  timps.ts
core/: executor.ts  planner.ts
crates/timps-agent/: Cargo.toml
crates/timps-agent/src/: acp.rs  lib.rs  recipes.rs
crates/timps-cli/: Cargo.toml
crates/timps-cli/src/: main.rs
crates/timps-memory/: Cargo.toml
crates/timps-memory/src/: lib.rs
crates/timps-providers/: Cargo.toml
crates/timps-providers/src/: azure.rs  claude.rs  cohere.rs  compat.rs  config.rs  deepseek.rs  fireworks.rs  gemini.rs  groq.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  together.rs  xai.rs
crates/timps-server/: Cargo.toml
crates/timps-server/src/: main.rs
crates/timps-tools/: Cargo.toml
crates/timps-tools/src/: file.rs  git.rs  lib.rs  memory_tool.rs  shell.rs  web.rs
db/: postgres.ts
demo/: HACKER_NEWS_POST.md  README.md  demo.tape  quick_demo.sh
docs/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
docs/docs/: contributing.md  intro.md
evals/: runner.ts
evals/python-harness/: README.md  run_eval.py
evals/suites/: chronos-forge.ts  echoForge.eval.ts  memory-accuracy.ts  provider-benchmark.ts  task-completion.ts
sandeep-ai/: .env  .env.example  .npmignore  COMPLETION_SUMMARY.md  DEPLOY.md  Dockerfile  QUICKSTART.md  README.md  TUI_README.md  logger.ts  main.ts  package-lock.json  package.json  seed.ts  test_tool5.ts  tsconfig.json
sandeep-ai/api/: routes.ts  server.ts
sandeep-ai/config/: env.d.ts.map  env.js.map  env.ts
sandeep-ai/core/: agent.ts  apexSynapse.ts  bindWeave.ts  chronosVeil.ts  curateTier.ts  echoForge.ts  eventBus.ts  executor.ts  gateWeave.ts  governTier.ts  index.ts  layerForge.ts  nexusForge.ts  planner.ts  policyMetabol.ts  reflection.ts  (+10 more)
scripts/: download-dataset.sh
timps-code/: .npmignore  README.md  SPEC.md  install.sh  jest.config.cjs  package-lock.json  package.json  tsconfig.json
timps-jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
timps-mcp/: .npmignore  README.md  index.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json
timps-neovim/: README.md
timps-sandbox-final/: sandbox-demo.ts
timps-vscode/: .vscodeignore  LICENSE  MCP_API.md  PUBLISH.md  README.md  TIMPS_SKILLS.md  jest.config.cjs  package-lock.json  package.json  publish.sh  timps-1.1.2.vsix  timps-ai-coding-agent-1.2.0.vsix  timps-vscode-1.0.0.vsix  timps-vscode-1.1.0.vsix  tsconfig.json
timps-website/: docs.html  ecosystem.html  index.html  plugins.json  vercel.json
tools/: fileTool.ts  index.ts
workflow_recipes/: code-review.yaml  debug-session.yaml  deploy-check.yaml  feature-plan.yaml
(+527 files in other folders)
