[workspace]
members = [
    "crates/timps-agent",
    "crates/timps-providers",
    "crates/timps-tools",
    "crates/timps-memory",
    "crates/timps-server",
    "crates/timps-cli",
    "packages/memory-core-rs",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Sandeeprdy1729/timps"

[workspace.dependencies]
# async runtime
tokio       = { version = "1", features = ["full"] }
# serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# HTTP client
reqwest     = { version = "0.12", features = ["json", "stream"] }
# HTTP server
axum        = { version = "0.7", features = ["json"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
# errors
anyhow      = "1"
thiserror   = "1"
# logging
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap        = { version = "4", features = ["derive"] }
# misc
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
hex         = "0.4"
dirs        = "5"
# futures / streams
futures     = "0.3"
async-trait = "0.1"
