[package]
name = "timps-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }
async-trait  = { workspace = true }
timps-memory    = { path = "../timps-memory" }
timps-providers = { path = "../timps-providers" }
timps-tools     = { path = "../timps-tools" }
serde_yml       = "0.0.12"
