[package]
name = "timps-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "timps"
path = "src/main.rs"

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
dirs         = { workspace = true }
timps-agent  = { path = "../timps-agent" }
timps-memory = { path = "../timps-memory" }
timps-tools  = { path = "../timps-tools" }
timps-providers = { path = "../timps-providers" }
