[package]
name = "timps-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
dirs         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tempfile = "3"
