[package]
name = "timps-providers"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
dirs        = { workspace = true }
toml        = "0.8"
