[package]
name = "timps-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "timps-server"
path = "src/main.rs"

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
timps-agent  = { path = "../timps-agent" }
timps-memory = { path = "../timps-memory" }
timps-tools  = { path = "../timps-tools" }
timps-providers = { path = "../timps-providers" }
